--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
     "styled-components": "^5.3.9",
     "web-vitals": "^2.1.4"
   },
